@@ -11,6 +11,7 @@ Merged from 2.2:
  * Don't send erroneous NEW_NODE notifications on restart (CASSANDRA-11038)
  * StorageService shutdown hook should use a volatile variable (CASSANDRA-11984)
 Merged from 2.1:
+ * Remove finished incoming streaming connections from MessagingService (CASSANDRA-11854)
  * Don't try to get sstables for non-repairing column families (CASSANDRA-12077)
  * Avoid marking too many sstables as repaired (CASSANDRA-11696)
  * Prevent select statements with clustering key > 64k (CASSANDRA-11882)
